--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "openai": "^3.2.1",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "groq-sdk": "^0.37.0",
+    "openai": "^6.15.0",
     "socket.io": "^4.6.0"
   }
 }
